--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#about">Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+            <a class="nav-link js-scroll-trigger" href="#experience">Experiencia</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+            <a class="nav-link js-scroll-trigger" href="#education">Educação</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+            <a class="nav-link js-scroll-trigger" href="#skills">Abilidades</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+            <a class="nav-link js-scroll-trigger" href="#interests">Intereces</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+            <a class="nav-link js-scroll-trigger" href="#awards">Conquistas</a>
           </li>
         </ul>
       </div>
@@ -66,10 +66,10 @@
           <h1 class="mb-0">Charles
             <span class="text-primary">Bezerra</span>
           </h1>
-          <div class="subheading mb-5">São Fernando - RN, Brazil (59327-000) · (84) 99924-3485 ·
+          <div class="subheading mb-5">São Fernando - RN, Brasil (59327-000) · (84) 99924-3485 ·
             <a href="mailto:charlesbezerra5@gmail.com">charlesbezerra5@gmail.com</a>
           </div>
-          <p class="lead mb-5">I am developer full-stack and mobile, have experience at web frameworks and know some development agile methods as Scrum. I am always to learning news technologies and news development methods. </p>
+          <p class="lead mb-5">Sou desenvolvedor full-stack e mobile, tenho experiencia com frameworks web e conheço alguns métodos de desenvolvimento ágil como o Scrum. Eu sempre estou estudando e procurando novas tecnologias e novos métodos de desenvolvimento. </p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/charles-bezerra-de-oliveira-junior-6b6356169/">
               <i class="fab fa-linkedin-in"></i>
@@ -99,7 +99,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
-          <h2 class="mb-5">Experience</h2>
+          <h2 class="mb-5">Experiência</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
@@ -153,28 +153,17 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
-          <h2 class="mb-5">Education</h2>
+          <h2 class="mb-5">Formação</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
+              <h3 class="mb-0">Instituto Federal do Rio Grande do Norte</h3>
+              <div class="subheading mb-3">INICIAÇÃO CIÊNTIFICA</div>
+              <div>Técnico em Informática - Desenvolvedor Web e Mobile</div>
               <p>GPA: 3.23</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">Maio 2015 - Dezembro 2018</span>
             </div>
           </div>
 
@@ -185,9 +174,9 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
-          <h2 class="mb-5">Skills</h2>
+          <h2 class="mb-5">Abilidades</h2>
 
-          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+          <div class="subheading mb-3">Programação nas Linguagens &amp; Ferramentas</div>
           <ul class="list-inline dev-icons">
             <li class="list-inline-item">
               <i class="fab fa-html5"></i>
