--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <body id="page-top">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav" style="background-color: #363636;"
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Charles Bezerra</span>
         <span class="d-none d-lg-block">
@@ -49,12 +49,12 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#skills">Abilidades</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Intereces</a>
+<!--           <li class="nav-item">
+               <a class="nav-link js-scroll-trigger" href="#interests">Intereces</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Conquistas</a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </nav>
@@ -83,7 +83,7 @@
             <a href="https://www.instagram.com/charlesbezerra5/">
               <i class="fab fa-instagram"></i>
             </a>
-            <a href="#">
+            <a href="tel:+5584999243485">
               <i class="fab fa-whatsapp"></i>
             </a>
             <a href="#">
@@ -103,45 +103,37 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <h3 class="mb-0">Desenvolvedor Junior Font-end</h3>
+              <div class="subheading mb-3">Bolsista no setor de pesquisa e inovação do IFRN Campus Caicó, fui responsável por criar a página web do setor utilizando a ferramenta de páginas estáticas Jekyll, além de HTML5, Javascript, JQuery e CSS3.
+              </p>
+              </div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
+              <span class="text-primary">Julho 2018 - Agosto 2018</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+              <h3 class="mb-0">Desenvolvedor Junior Full-Stack</h3>
+              <div class="subheading mb-3">Desenvolvimento de site com PHP e MySQL</div>
+              <p>Estágio de manutenção de computadores na Empresa Net Informática LTDA onde criei um site para a loja com PHP, MySQL, HTML, CSS, JQuery e Ajax. Além de exercer manutenções em computadores.
+              </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
+              <span class="text-primary">Maio 2017 - Outubro 2017</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+              <h3 class="mb-0">Desenvolvedor Junior de Softwares</h3>
+              <div class="subheading mb-3">Desenvolvimento de sites e aplicativos</div>
+              <p>Participei do grupo de pesquisa CCSL - Centro de Competência em Softwares Livres no IFRN Campus Caicó, criei aplicativos e páginas Web com as linguagens Javascript, Python e C++. Além de utilizar os frameworks JQuery, Kivy e OpenCV.
+              </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
+              <span class="text-primary"> 2018 - Agosto 2018</span>
             </div>
           </div>
 
@@ -158,7 +150,7 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Instituto Federal do Rio Grande do Norte</h3>
-              <div class="subheading mb-3">INICIAÇÃO CIÊNTIFICA</div>
+              <div class="subheading mb-3">INICIAÇÃO A PRÁTICA CIÊNTIFICA</div>
               <div>Técnico em Informática - Desenvolvedor Web e Mobile</div>
               <p>GPA: 3.23</p>
             </div>
@@ -236,33 +228,24 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
+              Desenvolvimento Ágil &amp; Scrum</li>
           </ul>
         </div>
       </section>
 
       <hr class="m-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+<!--       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
+          <h2 class="mb-5">Interesse</h2>
           <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
           <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
         </div>
       </section>
 
-      <hr class="m-0">
+      <hr class="m-0"> -->
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
+<!--       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
           <h2 class="mb-5">Awards &amp; Certifications</h2>
           <ul class="fa-ul mb-0">
@@ -293,7 +276,7 @@
               3<sup>rd</sup>
               Place - James Buchanan High School - Hackathon 2005</li>
           </ul>
-        </div>
+        </div> -->
       </section>
 
     </div>
