--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a class="nav-link js-scroll-trigger" href="#education">Educação</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Abilidades</a>
+            <a class="nav-link js-scroll-trigger" href="#skills">Habilidades</a>
           </li>
 <!--           <li class="nav-item">
                <a class="nav-link js-scroll-trigger" href="#interests">Intereces</a>
@@ -166,7 +166,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
-          <h2 class="mb-5">Abilidades</h2>
+          <h2 class="mb-5">Habilidades</h2>
 
           <div class="subheading mb-3">Programação nas Linguagens &amp; Ferramentas</div>
           <ul class="list-inline dev-icons">
