--- a/index.html
+++ b/index.html
@@ -222,6 +222,10 @@
               <i class="fab fa-android"></i>
               <center><p style="font-size: 30%">Android Studio</p></center>
             </li>
+             <li class="list-inline-item">
+              <i class="fab fa-react"></i>
+              <center><p style="font-size: 30%">Android Studio</p></center>
+            </li>
           </ul>
 
           <div class="subheading mb-3">Workflow</div>
