--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             </li>
              <li class="list-inline-item">
               <i class="fab fa-react"></i>
-              <center><p style="font-size: 30%">Android Studio</p></center>
+              <center><p style="font-size: 30%">React Notive</p></center>
             </li>
           </ul>
 
