--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary"> JULHO 2016 - MAIO 2018</span>
+              <span class="text-primary"> Julho 2016 - Maio 2018</span>
             </div>
           </div>
 
