--- a/index.html
+++ b/index.html
@@ -100,7 +100,19 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Experiência</h2>
-
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Desenvolvedor Mobile e Full-Stack</h3>
+              <div class="subheading mb-3">Desenvolvedor freelancer na empresa Lamp Websites, na qual tive experience com técnicas de desenvolvimento ágil, além de ter contato com algumas ferramentos com Wordpress, alguns FrameWorks como React Nativa e algumas linguagens como PHP e JavaScript.
+                  Também trabalhei com HTML5, CSS, GULP, SASS e Node.js.
+              </p>
+              </div>
+            </div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Dezembro 2018</span>
+          </div>
+        </div>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Desenvolvedor Junior Font-end</h3>
