--- a/index.html
+++ b/index.html
@@ -103,16 +103,17 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Desenvolvedor Mobile e Full-Stack</h3>
-              <div class="subheading mb-3">Desenvolvedor freelancer na empresa Lamp Websites, na qual tive experience com técnicas de desenvolvimento ágil, além de ter contato com algumas ferramentos com Wordpress, alguns FrameWorks como React Nativa e algumas linguagens como PHP e JavaScript.
+              <div class="subheading mb-3">Desenvolvedor freelancer na empresa Lamp Websites.</div>
+              <p>
+                Na Lamp Websites tive experience com técnicas de desenvolvimento ágil, além de ter contato com algumas ferramentos com Wordpress, alguns FrameWorks como React Nativa e algumas linguagens como PHP e JavaScript.
                   Também trabalhei com HTML5, CSS, GULP, SASS e Node.js.
               </p>
-              </div>
+            </div>
+            <div class="resume-date text-md-right">
+                <span class="text-primary">Dezembro 2018</span>
             </div>
           </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">Dezembro 2018</span>
-          </div>
-        </div>
+
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Desenvolvedor Junior Font-end</h3>
@@ -261,7 +262,7 @@
 
       <hr class="m-0">
 
-<!--       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+<!--  s<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interesse</h2>
           <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
