--- a/index.html
+++ b/index.html
@@ -172,6 +172,19 @@
             </div>
           </div>
 
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Universidade Federal de Campina Grande</h3>
+              <div class="subheading mb-3">Graduação</div>
+              <div>Ciência da Computação</div>
+              <p>GPA: 3.23</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Março 2019</span>
+            </div>
+          </div>
+          
+          
         </div>
       </section>
 
